--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,8 @@
       "request": "launch",
       "program": "${workspaceFolder}/client-api/.compiled/index.js",
       "sourceMaps": true,
-      "envFile": "${workspaceRoot}/client-api/.env"
+      "envFile": "${workspaceRoot}/client-api/.env",
+      "env": { "NODE_ENV": "development" }
     },
     {
       "name": "Launch Chrome against localhost web client",
