--- a/client-api/package.json
+++ b/client-api/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@google-cloud/language": "1.2.0",
     "@google-cloud/storage": "1.6.0",
+    "@types/neo4j": "2.0.2",
     "@types/node": "9.4.6",
     "apollo-server-express": "1.3.2",
     "body-parser": "1.18.2",
