--- a/client-api/tsconfig.json
+++ b/client-api/tsconfig.json
@@ -5,8 +5,7 @@
     "outDir": "./.compiled",
     "lib": ["es6", "dom", "esnext"],
     "sourceMap": true,
-    "types": ["node"],
-    "typeRoots": ["node_modules/@types"]
+    "types": ["node"]
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "**/*.spec.ts"]
