--- a/web-client/prod.yaml
+++ b/web-client/prod.yaml
@@ -1,19 +1,19 @@
 # [START runtime]
 runtime: python27
 threadsafe: true
-service: web-client
+service: web-client-prod
 
-manual_scaling:
-  instances: 1
+basic_scaling:
+  max_instances: 5
 
 resources:
   cpu: 1
   memory_gb: 0.5
   disk_size_gb: 10
 
-beta_settings:
-
 env_variables:
+  REACT_APP_GRAPHQL_URI: "https://client-api-prod-dot-opit-193719.appspot.com/graphql"
+  NODE_ENV: "production"
 # [END runtime]
 
 # [START handlers]
