--- a/client-api/package.json
+++ b/client-api/package.json
@@ -17,13 +17,16 @@
   "license": "ISC",
   "dependencies": {
     "@google-cloud/language": "1.2.0",
+    "@google-cloud/storage": "1.6.0",
     "apollo-server-express": "1.3.2",
     "body-parser": "1.18.2",
+    "cheerio": "1.0.0-rc.2",
     "cors": "2.8.4",
     "dedupe": "2.1.0",
     "dotenv": "5.0.1",
     "express": "4.16.2",
     "firebase-admin": "5.12.0",
+    "formidable": "1.2.1",
     "graphql": "0.12.3",
     "graphql-tools": "2.19.0",
     "lodash": "4.17.5",
@@ -34,7 +37,9 @@
     "uuid": "3.2.1"
   },
   "devDependencies": {
+    "@types/cheerio": "0.22.7",
     "@types/express": "4.11.1",
+    "@types/formidable": "1.0.31",
     "@types/graphql": "0.12.4",
     "@types/neo4j": "2.0.2",
     "@types/node": "9.6.5",
