--- a/client-api/tsconfig.json
+++ b/client-api/tsconfig.json
@@ -1,5 +1,7 @@
 {
   "compilerOptions": {
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
     "target": "es6",
     "module": "commonjs",
     "outDir": "./.compiled",
