--- a/client-api/package.json
+++ b/client-api/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "compile": "tsc -w",
+    "lint": "tslint -c tslint.json 'src/**/*.ts'",
     "build": "tsc",
     "start": "node .compiled/index.js",
     "deploy:api:dev": "yarn build && gcloud -q app deploy ./dev.yaml",
