--- a/website/package.json
+++ b/website/package.json
@@ -5,6 +5,8 @@
   "author": "Ruben Harutyunyan <vagr9k@gmail.com>",
   "dependencies": {
     "babel-plugin-lodash": "^3.3.2",
+    "echarts": "4.1.0",
+    "echarts-for-react": "2.0.8",
     "gatsby": "^1.9.178",
     "gatsby-link": "^1.6.36",
     "gatsby-plugin-catch-links": "^1.0.15",
