--- a/website/package.json
+++ b/website/package.json
@@ -63,9 +63,8 @@
     "dev": "npm run develop",
     "serve": "gatsby serve",
     "build": "gatsby build",
-    "build:pp": "gatsby build --prefix-paths",
     "deploy":
-      "npm run clean && npm run build:pp && gsutil rsync -R ./public gs://www.usetangle.com && gsutil acl ch -R -u AllUsers:R gs://www.usetangle.com && gsutil web set -m index.html gs://www.usetangle.com",
+      "npm run clean && npm run build && gsutil rsync -R ./public gs://www.usetangle.com && gsutil acl ch -R -u AllUsers:R gs://www.usetangle.com && gsutil web set -m index.html gs://www.usetangle.com",
     "clean": "rm -rf public",
     "lint:js": "eslint --ext .js,.jsx .",
     "lint:md": "remark content/posts/",
