--- a/website/package.json
+++ b/website/package.json
@@ -63,8 +63,9 @@
     "dev": "npm run develop",
     "serve": "gatsby serve",
     "build": "gatsby build",
-    "deploy":
-      "npm run clean && npm run build && gsutil rsync -R ./public gs://usetangle.com && gsutil acl ch -R -u AllUsers:R gs://usetangle.com && gsutil web set -m index.html gs://usetangle.com",
+    "build:pp": "gatsby build --prefix-paths",
+    "build:gh": "npm run clean && npm run build:pp && gh-pages -d public",
+    "deploy": "npm run build:gh",
     "clean": "rm -rf public",
     "lint:js": "eslint --ext .js,.jsx .",
     "lint:md": "remark content/posts/",
