--- a/web-client/package.json
+++ b/web-client/package.json
@@ -51,10 +51,19 @@
     "deploy:web:dev":
       "REACT_APP_ENV=development yarn build && gcloud -q app deploy ./dev.yaml",
     "deploy:web:prod":
-      "REACT_APP_ENV=production yarn build && gcloud -q app deploy ./prod.yaml"
+      "REACT_APP_ENV=production yarn build && gcloud -q app deploy ./prod.yaml",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook",
+    "css": "tachyons src/css/app.css > src/index.css --minify",
+    "prestart": "npm run css",
+    "prebuild": "npm run css"
   },
   "devDependencies": {
     "@firebase/app-types": "0.1.2",
+    "@storybook/addon-actions": "^3.4.3",
+    "@storybook/addon-links": "^3.4.3",
+    "@storybook/addons": "^3.4.3",
+    "@storybook/react": "^3.4.3",
     "@types/axios": "0.14.0",
     "@types/echarts": "^0.0.12",
     "@types/graphql": "0.12.4",
@@ -66,7 +75,15 @@
     "@types/react-dom": "^16.0.4",
     "@types/react-router": "^4.0.22",
     "@types/react-router-dom": "^4.2.4",
+    "@types/storybook__addon-actions": "3.0.3",
+    "@types/storybook__addon-links": "3.3.0",
+    "@types/storybook__react": "3.0.7",
     "apollo-codegen": "0.19.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "7.1.4",
+    "babel-runtime": "^6.26.0",
+    "tachyons-cli": "1.3.0",
+    "ts-loader": "3.5.0",
     "typescript": "^2.7.2"
   }
 }
