--- a/web-client/package.json
+++ b/web-client/package.json
@@ -3,8 +3,7 @@
   "productName": "Tangle",
   "version": "0.1.0",
   "engine": "8.9.4",
-  "description":
-    "A web client for empowering people to capture and connect thoughts to create big ideas",
+  "description": "A web client for empowering people to capture and connect thoughts to create big ideas",
   "private": true,
   "dependencies": {
     "apollo-cache-inmemory": "1.1.9",
@@ -44,14 +43,10 @@
     "build": "react-scripts-ts build",
     "test": "react-scripts-ts test --env=jsdom",
     "eject": "react-scripts-ts eject",
-    "schema":
-      "apollo-codegen introspect-schema ../client-api/data-template/schema.graphql --output ./src/schema.json",
-    "types":
-      "rm -rf ./src/__generated__ && mkdir ./src/__generated__ && apollo-codegen generate ./src/**/queries.ts --addTypename --schema ./src/schema.json --target typescript --output ./src/__generated__/types.ts",
-    "deploy:web:dev":
-      "REACT_APP_ENV=development yarn build && gcloud -q app deploy ./dev.yaml",
-    "deploy:web:prod":
-      "REACT_APP_ENV=production yarn build && gcloud -q app deploy ./prod.yaml",
+    "schema": "apollo-codegen introspect-schema ../client-api/data-template/schema.graphql --output ./src/schema.json",
+    "types": "rm -rf ./src/__generated__ && mkdir ./src/__generated__ && apollo-codegen generate ./src/**/queries.ts --addTypename --schema ./src/schema.json --target typescript --output ./src/__generated__/types.ts",
+    "deploy:web:dev": "REACT_APP_ENV=development yarn build && gcloud -q app deploy ./dev.yaml",
+    "deploy:web:prod": "REACT_APP_ENV=production yarn build && gcloud -q app deploy ./prod.yaml",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "css": "tachyons src/css/app.css > src/tachyons.css --minify",
@@ -62,6 +57,7 @@
     "@firebase/app-types": "0.1.2",
     "@storybook/addon-actions": "^3.4.3",
     "@storybook/addon-links": "^3.4.3",
+    "@storybook/addon-storyshots": "3.4.3",
     "@storybook/addons": "^3.4.3",
     "@storybook/react": "^3.4.3",
     "@types/axios": "0.14.0",
@@ -75,13 +71,16 @@
     "@types/react-dom": "^16.0.4",
     "@types/react-router": "^4.0.22",
     "@types/react-router-dom": "^4.2.4",
+    "@types/react-test-renderer": "16.0.1",
     "@types/storybook__addon-actions": "3.0.3",
     "@types/storybook__addon-links": "3.3.0",
+    "@types/storybook__addon-storyshots": "3.4.0",
     "@types/storybook__react": "3.0.7",
     "apollo-codegen": "0.19.0",
     "babel-core": "^6.26.3",
     "babel-loader": "7.1.4",
     "babel-runtime": "^6.26.0",
+    "react-test-renderer": "16.3.2",
     "tachyons-cli": "1.3.0",
     "ts-loader": "3.5.0",
     "typescript": "^2.7.2"
