--- a/client-api/package.json
+++ b/client-api/package.json
@@ -22,7 +22,12 @@
       "^.+\\.ts$": "ts-jest"
     },
     "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(ts)$",
-    "moduleFileExtensions": ["ts", "js", "json", "node"]
+    "moduleFileExtensions": [
+      "ts",
+      "js",
+      "json",
+      "node"
+    ]
   },
   "license": "ISC",
   "dependencies": {
@@ -51,6 +56,7 @@
     "@types/cheerio": "0.22.7",
     "@types/express": "4.11.1",
     "@types/express-formidable": "1.0.3",
+    "@types/google-cloud__storage": "1.1.7",
     "@types/graphql": "0.12.4",
     "@types/jest": "22.2.3",
     "@types/neo4j": "2.0.2",
