--- a/web-client/package.json
+++ b/web-client/package.json
@@ -57,6 +57,7 @@
     "@firebase/app-types": "0.1.2",
     "@storybook/addon-actions": "^3.4.3",
     "@storybook/addon-links": "^3.4.3",
+    "@storybook/addon-storyshots": "3.4.3",
     "@storybook/addons": "^3.4.3",
     "@storybook/react": "^3.4.3",
     "@types/axios": "0.14.0",
@@ -70,13 +71,16 @@
     "@types/react-dom": "^16.0.4",
     "@types/react-router": "^4.0.22",
     "@types/react-router-dom": "^4.2.4",
+    "@types/react-test-renderer": "16.0.1",
     "@types/storybook__addon-actions": "3.0.3",
     "@types/storybook__addon-links": "3.3.0",
+    "@types/storybook__addon-storyshots": "3.4.0",
     "@types/storybook__react": "3.0.7",
     "apollo-codegen": "0.19.0",
     "babel-core": "^6.26.3",
     "babel-loader": "7.1.4",
     "babel-runtime": "^6.26.0",
+    "react-test-renderer": "16.3.2",
     "tachyons-cli": "1.3.0",
     "ts-loader": "3.5.0",
     "typescript": "^2.7.2"
