--- a/web-client/package.json
+++ b/web-client/package.json
@@ -28,6 +28,7 @@
     "react-quill": "1.2.6",
     "react-router-dom": "^4.2.2",
     "react-scripts-ts": "2.13.0",
+    "react-tooltip": "3.5.1",
     "react-window-size": "1.0.1",
     "scroll-into-view": "1.9.3",
     "tachyons": "^4.9.1",
@@ -56,6 +57,7 @@
   "devDependencies": {
     "@firebase/app-types": "0.1.2",
     "@storybook/addon-actions": "^3.4.3",
+    "@storybook/addon-knobs": "3.4.3",
     "@storybook/addon-links": "^3.4.3",
     "@storybook/addon-storyshots": "3.4.3",
     "@storybook/addons": "^3.4.3",
@@ -73,6 +75,7 @@
     "@types/react-router-dom": "^4.2.4",
     "@types/react-test-renderer": "16.0.1",
     "@types/storybook__addon-actions": "3.0.3",
+    "@types/storybook__addon-knobs": "3.3.1",
     "@types/storybook__addon-links": "3.3.0",
     "@types/storybook__addon-storyshots": "3.4.0",
     "@types/storybook__react": "3.0.7",
