--- a/web-client/package.json
+++ b/web-client/package.json
@@ -11,6 +11,7 @@
     "apollo-link-context": "1.0.7",
     "apollo-link-error": "1.0.9",
     "apollo-link-http": "1.5.2",
+    "apollo-link-retry": "2.2.3",
     "axios": "0.18.0",
     "echarts": "^4.0.4",
     "echarts-for-react": "^2.0.8",
