--- a/client-api/package.json
+++ b/client-api/package.json
@@ -44,6 +44,7 @@
     "firebase-admin": "5.12.0",
     "graphql": "0.12.3",
     "graphql-tools": "2.20.0",
+    "html2plaintext": "2.0.1",
     "lodash": "4.17.5",
     "moment": "2.22.0",
     "neo4j-driver": "1.5.3",
