--- a/web-client/package.json
+++ b/web-client/package.json
@@ -13,6 +13,8 @@
     "apollo-link-http": "1.5.2",
     "apollo-link-retry": "2.2.3",
     "axios": "0.18.0",
+    "draft-js": "0.10.5",
+    "draft-js-export-html": "1.2.0",
     "echarts": "^4.0.4",
     "echarts-for-react": "^2.0.8",
     "firebase": "4.12.1",
@@ -26,7 +28,6 @@
     "react-dom": "^16.2.0",
     "react-feather": "^1.0.8",
     "react-firebaseui": "1.2.3",
-    "react-quill": "1.2.6",
     "react-router-dom": "^4.2.2",
     "react-scripts-ts": "2.13.0",
     "react-tooltip": "3.5.1",
@@ -61,12 +62,12 @@
     "@storybook/addons": "^3.4.3",
     "@storybook/react": "^3.4.3",
     "@types/axios": "0.14.0",
+    "@types/draft-js": "0.10.23",
     "@types/echarts": "^0.0.12",
     "@types/graphql": "0.12.4",
     "@types/jest": "^22.1.3",
     "@types/lodash": "^4.14.104",
     "@types/node": "^9.4.6",
-    "@types/quill": "^1.3.6",
     "@types/react": "^16.0.38",
     "@types/react-dom": "^16.0.4",
     "@types/react-router": "^4.0.22",
