--- a/client-api/package.json
+++ b/client-api/package.json
@@ -39,6 +39,7 @@
     "cors": "2.8.4",
     "dedupe": "2.1.0",
     "dotenv": "5.0.1",
+    "elasticsearch": "15.0.0",
     "express": "4.16.2",
     "express-formidable": "1.0.0",
     "firebase-admin": "5.12.0",
@@ -55,6 +56,7 @@
   "devDependencies": {
     "@types/body-parser": "1.17.0",
     "@types/cheerio": "0.22.7",
+    "@types/elasticsearch": "5.0.24",
     "@types/express": "4.11.1",
     "@types/express-formidable": "1.0.3",
     "@types/google-cloud__storage": "1.1.7",
