--- a/web-client/package.json
+++ b/web-client/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^16.2.0",
     "react-feather": "^1.0.8",
     "react-firebaseui": "1.2.3",
+    "react-resize-detector": "2.3.0",
     "react-router-dom": "^4.2.2",
     "react-scripts-ts": "2.13.0",
     "react-tooltip": "3.5.1",
