--- a/client-api/package.json
+++ b/client-api/package.json
@@ -37,6 +37,7 @@
     "apollo-server-express": "1.3.2",
     "body-parser": "1.18.2",
     "cheerio": "1.0.0-rc.2",
+    "continuation-local-storage": "3.2.1",
     "cors": "2.8.4",
     "dedupe": "2.1.0",
     "dotenv": "5.0.1",
@@ -50,7 +51,6 @@
     "lodash": "4.17.5",
     "moment": "2.22.0",
     "neo4j-driver": "1.5.3",
-    "request-context": "2.0.0",
     "typescript": "2.8.3",
     "uuid": "3.2.1",
     "winston": "3.0.0"
@@ -58,6 +58,7 @@
   "devDependencies": {
     "@types/body-parser": "1.17.0",
     "@types/cheerio": "0.22.7",
+    "@types/continuation-local-storage": "3.2.1",
     "@types/elasticsearch": "5.0.24",
     "@types/express": "4.11.1",
     "@types/express-formidable": "1.0.3",
