--- a/client-api/package.json
+++ b/client-api/package.json
@@ -50,7 +50,9 @@
     "html2plaintext": "2.0.1",
     "lodash": "4.17.5",
     "moment": "2.22.0",
+    "morgan": "1.9.0",
     "neo4j-driver": "1.5.3",
+    "rotating-file-stream": "1.3.6",
     "typescript": "2.8.3",
     "uuid": "3.2.1",
     "winston": "3.0.0"
@@ -65,6 +67,7 @@
     "@types/google-cloud__storage": "1.1.7",
     "@types/graphql": "0.13.1",
     "@types/jest": "22.2.3",
+    "@types/morgan": "1.7.35",
     "@types/neo4j": "2.0.2",
     "@types/node": "9.6.5",
     "@types/winston": "2.3.9",
