--- a/ops/dev/neo4j/kubernetes/statefulset.yaml
+++ b/ops/dev/neo4j/kubernetes/statefulset.yaml
@@ -13,8 +13,8 @@ spec:
     spec:
       containers:
       - name: neo4j
-        image: "neo4j:3.4.0-enterprise"
-        imagePullPolicy: "IfNotPresent"
+        image: "us.gcr.io/opit-193719/dev-neo4j-image"
+        imagePullPolicy: "Always"
         env:
           - name: NEO4J_dbms_active__database
             value: new.db
