--- a/ops/dev/neo4j/kubernetes/statefulset.yaml
+++ b/ops/dev/neo4j/kubernetes/statefulset.yaml
@@ -29,7 +29,7 @@ spec:
           - name: NEO4J_ACCEPT_LICENSE_AGREEMENT
             value: "yes"
           - name: NEO4J_com_graphaware_module_ES_uri
-            value: elastic:INSERT_PASSWORD@288980f6c159489db0257552ec2350f5.us-central1.gcp.cloud.es.io
+            value: elastic:a9tKlHYgdjUWsyt71YLjg6rs@288980f6c159489db0257552ec2350f5.us-central1.gcp.cloud.es.io
         command:
           - "/bin/bash"
           - "-ecx"
